force-app/main/default/objects/Apttus__LiteUserException__c/Apttus__LiteUserException__c.object-meta.xml
<CustomObject>
    <description>Hold lite user&apos;s login violation details</description>
    <label>Lite User Usage Exception</label>
    <nameField>
        <label>LiteUserException Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lite Users Usage Exception</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>