force-app/main/default/objects/Apttus__LiteUserException__c/fields/Apttus__PeriodEndDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus__PeriodEndDate__c</fullName>
    <description>End date of the login count</description>
    <inlineHelpText>End date of the login count period</inlineHelpText>
    <label>Period End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>