force-app/main/default/objects/Apttus__LiteUserException__c/fields/Apttus__PeriodStartDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus__PeriodStartDate__c</fullName>
    <description>Start date of the login count begin</description>
    <inlineHelpText>Start date of the login count period</inlineHelpText>
    <label>Period Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>