force-app/main/default/objects/Apttus__LiteUserException__c/fields/Apttus__UserId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User Id belongs to lite profiles</description>
    <inlineHelpText>User Id</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lite_Users_Exception</relationshipName>
    <type>Lookup</type>
</CustomField>